@@ -1,1 +1,1 @@
-!function(a){"use strict";a.module("user_management.password",["ngRoute"])}(window.angular),function(a){"use strict";var b=a.module("user_management.password");b.provider("userManagementPasswordConfig",function(){var a="",b="/auth/password_reset/confirm",c="/auth/password_reset",d="/profile/password";return{$get:function(){return{apiRoot:function(){return a},changeEndpoint:function(){return b},resetRequestEndpoint:function(){return c},updateEndpoint:function(){return d}}},setApiRoot:function(b){a=b},setChangeEndpoint:function(a){b=a},setResetRequestEndpoint:function(a){c=a},setUpdateEndpoint:function(a){d=a}}})}(window.angular),function(a){"use strict";var b=a.module("user_management.password");b.config(["$routeProvider",function(a){a.when("/password-reset/",{templateUrl:"templates/user_management/password/reset_request.html",controller:"PasswordResetRequestCtrl",anonymousOnly:!0}).when("/password-change/:token*/",{templateUrl:"templates/user_management/password/change.html",controller:"PasswordChangeCtrl",anonymousOnly:!0})}])}(window.angular),function(a){"use strict";var b=a.module("user_management.password");b.factory("passwordFactory",["$http","userManagementPasswordConfig",function(a,b){var c=b.apiRoot(),d={url:c+b.resetRequestEndpoint(),options:function(){return a({method:"OPTIONS",url:d.url})},post:function(b){return a({method:"POST",url:d.url,data:b})}},e={url:c+b.changeEndpoint(),options:function(b){return a({method:"OPTIONS",url:e.url+"/"+b})},put:function(b,c){return a({method:"PUT",url:e.url+"/"+c,data:b})}},f={url:c+b.updateEndpoint(),options:function(){return a({method:"OPTIONS",url:f.url})},put:function(b){return a({method:"PUT",url:f.url,data:b})}};return{resetRequest:d,change:e,update:f}}])}(window.angular),function(a){"use strict";var b=a.module("user_management.password");b.controller("PasswordResetRequestCtrl",[function(){}]),b.controller("PasswordChangeCtrl",[function(){}])}(window.angular),function(a){"use strict";var b=a.module("user_management.password");b.directive("passwordResetRequestForm",["passwordFactory",function(b){return{restrict:"A",scope:!0,templateUrl:"templates/user_management/password/reset_request_form.html",link:function(c,d,e){c.data={};var f=b.resetRequest.options();f.then(function(a){c.fields=a.data.actions.POST}),c.resetRequest=function(){c.loading||f.then(function(){c.loading=!0,c.email=null,c.successData=void 0,c.errorData=void 0,a.forEach(c.fields,function(a,b){a.errors=""}),c.errors={},b.resetRequest.post(c.data).then(function(a){c.email=c.data.email,c.data={},c.successData=a.data},function(b){c.errorData=b.data,a.forEach(b.data,function(b,d){b=a.isArray(b)?b[0]:b,a.isDefined(c.fields[d])&&(c.fields[d].errors=b),c.errors[d]=b})})["finally"](function(){c.loading=!1})})}}}}]),b.directive("passwordChangeForm",["$route","passwordFactory",function(b,c){return{restrict:"A",scope:!0,templateUrl:"templates/user_management/password/change_form.html",link:function(d,e,f){d.data={};var g,h=b.current.pathParams.token;g=a.isDefined(h)?c.change.options(h):c.update.options(),g.then(function(a){d.fields=a.data.actions.PUT},function(b){404===b.status&&a.isDefined(h)&&(d.tokenError=!0)}),d.changePassword=function(){d.loading||g.then(function(){d.loading=!0,d.changed=!1,d.updated=!1,d.successData=void 0,d.errorData=void 0,a.forEach(d.fields,function(a,b){a.errors=""}),d.errors={};var b;b=a.isDefined(h)?c.change.put(d.data,h).then(function(a){d.data={},d.changed=!0,d.successData=a.data}):c.update.put(d.data).then(function(a){d.data={},d.updated=!0,d.successData=a.data}),b["catch"](function(b){d.errorData=b.data,a.forEach(b.data,function(b,c){b=a.isArray(b)?b[0]:b,a.isDefined(d.fields[c])&&(d.fields[c].errors=b),d.errors[c]=b})})["finally"](function(){d.loading=!1})})}}}}])}(window.angular);
+!function(a){"use strict";a.module("user_management.password",["ngRoute"])}(window.angular),function(a){"use strict";var b=a.module("user_management.password");b.provider("userManagementPasswordConfig",function(){var a="",b="/auth/password_reset/confirm",c="/auth/password_reset",d="/profile/password";return{$get:function(){return{apiRoot:function(){return a},changeEndpoint:function(){return b},resetRequestEndpoint:function(){return c},updateEndpoint:function(){return d}}},setApiRoot:function(b){a=b},setChangeEndpoint:function(a){b=a},setResetRequestEndpoint:function(a){c=a},setUpdateEndpoint:function(a){d=a}}})}(window.angular),function(a){"use strict";var b=a.module("user_management.password");b.config(["$routeProvider",function(a){a.when("/password-reset/",{templateUrl:"templates/user_management/password/reset_request.html",controller:"PasswordResetRequestCtrl",anonymousOnly:!0}).when("/password-change/:token*/",{templateUrl:"templates/user_management/password/change.html",controller:"PasswordChangeCtrl",anonymousOnly:!0})}])}(window.angular),function(a){"use strict";var b=a.module("user_management.password");b.factory("passwordFactory",["$http","userManagementPasswordConfig",function(a,b){var c=b.apiRoot(),d={url:c+b.resetRequestEndpoint(),options:function(){return a({method:"OPTIONS",url:d.url})},post:function(b){return a({method:"POST",url:d.url,data:b})}},e={url:c+b.changeEndpoint(),options:function(b){return a({method:"OPTIONS",url:e.url+"/"+b})},put:function(b,c){return a({method:"PUT",url:e.url+"/"+c,data:b})}},f={url:c+b.updateEndpoint(),options:function(){return a({method:"OPTIONS",url:f.url})},put:function(b){return a({method:"PUT",url:f.url,data:b})}};return{resetRequest:d,change:e,update:f}}])}(window.angular),function(a){"use strict";var b=a.module("user_management.password");b.controller("PasswordResetRequestCtrl",[function(){}]),b.controller("PasswordChangeCtrl",[function(){}])}(window.angular),function(a){"use strict";var b=a.module("user_management.password");b.directive("passwordResetRequestForm",["passwordFactory",function(b){return{restrict:"A",scope:!0,templateUrl:"templates/user_management/password/reset_request_form.html",link:function(c,d,e){c.data={};var f=b.resetRequest.options();f.then(function(a){c.fields=a.data.actions.POST}),c.resetRequest=function(){c.loading||f.then(function(){c.loading=!0,c.email=null,c.successData=void 0,c.errorData=void 0,a.forEach(c.fields,function(a,b){a.errors=""}),c.errors={},b.resetRequest.post(c.data).then(function(a){c.email=c.data.email,c.data={},c.successData=a.data},function(b){c.errorData=b.data,a.forEach(b.data,function(b,d){b=a.isArray(b)?b[0]:b,a.isDefined(c.fields[d])&&(c.fields[d].errors=b),c.errors[d]=b})})["finally"](function(){c.loading=!1})})}}}}]),b.directive("passwordChangeForm",["$route","passwordFactory",function(b,c){return{restrict:"A",scope:!0,templateUrl:"templates/user_management/password/change_form.html",link:function(d,e,f){d.data={};var g,h=b.current.pathParams.token;g=a.isDefined(h)?c.change.options(h):c.update.options(),g.then(function(a){d.fields=a.data.actions.PUT},function(b){a.isDefined(h)&&(d.tokenError=!0),a.isDefined(b.data)&&a.isDefined(b.data.detail)&&(d.errorMessage=b.data.detail)}),d.changePassword=function(){d.loading||g.then(function(){d.loading=!0,d.changed=!1,d.updated=!1,d.successData=void 0,d.errorData=void 0,a.forEach(d.fields,function(a,b){a.errors=""}),d.errors={};var b;b=a.isDefined(h)?c.change.put(d.data,h).then(function(a){d.data={},d.changed=!0,d.successData=a.data}):c.update.put(d.data).then(function(a){d.data={},d.updated=!0,d.successData=a.data}),b["catch"](function(b){d.errorData=b.data,a.forEach(b.data,function(b,c){b=a.isArray(b)?b[0]:b,a.isDefined(d.fields[c])&&(d.fields[c].errors=b),d.errors[c]=b})})["finally"](function(){d.loading=!1})})}}}}])}(window.angular);
