@@ -6,8 +6,12 @@
     <p translate>You've successfully changed your password.</p>
 </div>
 
-<div class="alert alert-danger" ng-if="tokenError">
+<div class="alert alert-danger" ng-if="tokenError && !errorMessage">
     <p translate>There was a problem with your token. Please try submitting a new password reset request.</p>
+</div>
+
+<div class="alert alert-danger" ng-if="errorMessage">
+    <p>{{ errorMessage }}</p>
 </div>
 
 <div class="form-group" ng-if="fields.old_password" ng-class="{'has-error': errors.old_password}">
